| Bug #12537 | UNION produces longtext instead of varchar | ||
|---|---|---|---|
| Submitted: | 12 Aug 2005 0:45 | Modified: | 1 Sep 2005 4:05 |
| Reporter: | Kolbe Kegel | ||
| Status: | Closed | ||
| Category: | Server: Optimizer | Severity: | S3 (Non-critical) |
| Version: | 4.1, 5.0 | OS: | Linux (Linux) |
| Assigned to: | Evgeny Potemkin | Target Version: | |
[12 Aug 2005 0:45]
Kolbe Kegel
[23 Aug 2005 15:34]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/28682
[30 Aug 2005 14:19]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/29027
[30 Aug 2005 22:07]
Evgeny Potemkin
Fixed in 4.1.15, cset 1.2377.6.1
[30 Aug 2005 23:07]
Evgeny Potemkin
Item::tmp_table_field_from_field_type() and create_tmp_field_from_item() was converting string field to blob depending on byte-wise length instead of character length, which results in converting valid varchar string with length == 86 to longtext.
[31 Aug 2005 20:05]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/29126
[31 Aug 2005 20:08]
Evgeny Potemkin
Fixed in 5.0.13, csets 1.1928,1.1929
[1 Sep 2005 4:05]
Paul DuBois
Noted in 4.1.15, 5.0.13 changelogs.
